# best-practices

./: .gitignore  .gitmodules  README.md
.github/: pull_request_template.md
IAM/: README.md  create_indices.py  memgraph_migrate.py  permission_analysis.py  postgres_iam.py  requirements.txt  run_demo.py
datasets/: README.md  csv_separator.py
flyway/: Dockerfile.flyway  README.md  docker-compose.yml  flyway.conf  verify_migration.py
graphrag/documentation_ingestion/: .gitignore  README.md  ai-toolkit  common.py  database.py  html_utils.py  models.py  process_kg.py  prompts.py  pyproject.toml  scrape_cypher.py  scrape_docs.py  scrape_sidebar.py  scrape_urls.py
graphrag/graphrag_kg_creation/backend/: .gitignore  main.py  mcp_client.py  pyproject.toml  requirements.txt  resources.py
graphrag/graphrag_kg_creation/backend/routes/: common.py  custom_tools.py  ingest.py  llm_utils.py  mcp.py  mcp_interceptor.py  openai_agents.py  openai_agents_variant.py  openai_agents_with_planning.py  openai_agents_with_reasoning.py  prompts.py  query.py  stats.py
graphrag/graphrag_kg_creation/backend/sessions/: conversations.db  conversations.db-shm  conversations.db-wal
graphrag/memgraph_assistant/backend/: ai-toolkit  main.py  mcp_client.py  pyproject.toml  resources.py
graphrag/memgraph_assistant/backend/routes/: __init__.py  chat.py  common.py  custom_tools.py  graph.py  ingest.py  mcp.py  mcp_interceptor.py  models.py  prompts.py  stats.py  url_discovery.py
import/: README.md
import/iceberg/: .gitignore  README.md  docker-compose.yml  generate_iceberg.py  iceberg_to_memgraph.py  pyproject.toml
import/iceberg/loaders/: __init__.py  base.py  duckdb_loader.py  pyiceberg_loader.py
liquibase/: Dockerfile.liquibase  README.md  docker-compose.yml  requirements.txt  verify_migration.py
neodash/: README.md  docker-compose.yml
powerbi_integration/: DESKTOP.md  Dockerfile  README.md  SERVICE.md  direct_query.py  docker-compose.yml  push_to_powerbi.py  requirements.txt  seed.py  (+1 more)
(+247 files in other folders)
