[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepeval>=3.5.2",
    "fastapi==0.109.0",
    "httpx>=0.28.1",
    "lightrag-hku[api]==1.4.8.2",
    "litellm>=1.77.1",
    "mcp>=1.14.1",
    "neo4j>=5.28.1",
    "numpy>=2.2.6",
    "openai-agents==0.6.1",
    "python-dotenv>=1.1.1",
    "unstructured[all-docs]>=0.12.6",
    "uvicorn[standard]>=0.31.1",
]
